# effective-programming-techniques

./: CNode.h  README.md  main.cpp
functions/: Functions.cpp  Functions.h
lab1/CTable/: CTable.cpp  CTable.h
lab1/test1/: test1.cpp  test1.vcxproj
lab2/CNumber/: CNumber.cpp  CNumber.h  CNumber.sln
lab3/: CMakeLists.txt  main.cpp
lab4/: CConsole.h  CMakeLists.txt  CNode.h  CString.cpp  CString.h  CTree.h  main.cpp
lab5/: CConsole.h  CMakeLists.txt  CMySmartPointer.h  CNode.h  CRefCounter.h  CString.cpp  CString.h  CTree.h  main.cpp
mini-project/: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CIndividual.cpp  CIndividual.h  Evaluator.cpp  Evaluator.h  Main.cpp  MyMath.cpp  temp.cod
